compose/templates/sys-stats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: sys-stats
  name: sys-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sys-stats
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: sys-stats
    spec:
      hostPID: true
      containers:
        - image: obeoneorg/sys-stats
          name: sys-stats
          resources:
            limits:
              nvidia.com/gpu: '1'
            requests:
              nvidia.com/gpu: '1'
          ports:
            - containerPort: 5000
              protocol: TCP
          securityContext:
            privileged: true
      restartPolicy: Always
