compose/templates/sys-stats-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml --chart
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: sys-stats
  name: sys-stats
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: sys-stats
