compose/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sys-stats
spec:
  rules:
  - host: sys-stats.obeone.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sys-stats
            port: 
              number: 5000
  tls:
  - hosts:
    - sys-stats.obeone.cloud
    secretName: obeone-cloud-tls
